fixing align center

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -794,7 +794,7 @@ footer .footer_2line {
   text-align: center;
   padding: 15px 0 25px 0;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr auto 1fr;
   grid-template-rows: auto;
   justify-content: center;
 
@@ -806,6 +806,15 @@ footer .footer_2line a + span:nth-of-type(2) {
 footer .footer_2line a:first-child {
   margin-bottom: 10px;
   
+}
+
+footer .footer_2line a:nth-of-type(1), footer .footer_2line a:nth-of-type(3) {
+  text-align: right;
+  margin-right: 10px;
+}
+footer .footer_2line a:nth-of-type(2), footer .footer_2line a:nth-of-type(4) {
+  text-align: left;
+  margin-left: 10px;
 }
 
 footer .footer_2line span {
@@ -848,6 +857,15 @@ footer section.times div img.country-flag {
   }
   footer section.times {
     gap: 10px;
+  }
+
+  footer .footer_2line a:nth-of-type(1), footer .footer_2line a:nth-of-type(3) {
+    text-align: unset;
+    margin-right: unset;
+  }
+  footer .footer_2line a:nth-of-type(2), footer .footer_2line a:nth-of-type(4) {
+    text-align: unset;
+    margin-left: unset;
   }
 }
 
